--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ management.info.env.enabled=true
 info.app.name=My Super Cool App
 info.app.description=A crazy fun app, yoohoo
 info.app.version=1.0.0
+
+#
+#   Define any crazy properties
+#
+
+coach.name=Mickey Mouse
+team.name=The Mouse club
