Properties context path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,16 @@ info.app.version=1.0.0
 #
 #   Define any crazy properties
 #
-
 coach.name=Mickey Mouse
 team.name=The Mouse club
+
+#
+# Change Spring boot embedded server port
+#server.port=7070
+
+#
+# Set the context path of the application
+#
+# All request should be prefixed with /mycoolapp
+
+server.servlet.context-path=/mycoolapp
